<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AVI播放器</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="file_name_hint">AVI文件名</string>
    <string name="file_name_text">galleon.avi</string>
    <string name="play_button">播放</string>
    <string name="error_alert_title">发生错误</string>
    <string name="bitmap_player_radio">Bitmap播放器</string>
    <string name="title_activity_bitmap_player">Bitmap播放器</string>
    <string name="title_activity_open_glplayer">OpenGL播放器</string>
    <string name="open_gl_player_radio">OpenGL播放器</string>
    <string name="title_activity_native_window">原生window player</string>
    <string name="native_window_player_radio">原生window player</string>

</resources>
